# iureditor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json.tmp.21637.3d83546155e9
.github/workflows/: ci.yml  release.yml
scripts/: install-desktop-dev.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  iureditor.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CalloutNodeView.tsx  ColorPicker.tsx  Editor.tsx  FilesPanel.tsx  ImageModal.tsx  ImageNodeView.tsx  LinkModal.tsx  MathNodeView.tsx  MenuBar.tsx  MermaidNodeView.tsx  OutlinePanel.tsx  PrintPreview.tsx  ResizeHandles.tsx  SearchBar.tsx  Sidebar.tsx  SlashMenu.tsx  SourceView.tsx  StatusBar.tsx  TableMenu.tsx  TitleBar.tsx  ToolbarButton.tsx
src/extensions/: callout.ts  footnote.ts  imageResolve.ts  localImage.ts  math.ts  mermaid.ts  searchReplace.ts  slashCommand.ts
src/lib/: autosave.ts  diagramExport.ts  exportDocx.ts  exportHtml.ts  exportHtmlFile.ts  exportPdf.ts  fileio.ts  help.ts  highlight.ts  i18n.ts  katex.ts  markdown.ts  menu.ts  mermaid.ts  outline.ts  prefs.ts  session.ts  templates.ts  updater.ts  useDropdownClamp.ts
src/styles/: app.css  markdown.css  print.css  tiptap.css
src/test/: docx.test.ts  footnote.test.ts  frontmatter.test.ts  localimage.test.ts  math.test.ts  outline.test.ts  roundtrip.test.ts  search.test.ts
src/test/fixtures/: golden.md
src/types/: pagedjs.d.ts
