[package]
name = "iureditor"
version = "0.1.0"
description = "Editor WYSIWYG de Markdown con Mermaid y export a PDF/DOCX"
authors = ["Eduardo Llaguno"]
license = "MIT"
repository = "https://github.com/ellaguno/iureditor"
edition = "2021"

[lib]
name = "iureditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.47.0"
base64 = "0.22.1"
