[package]
name = "iureditor"
version = "1.5.5"
description = "Editor WYSIWYG de Markdown con Mermaid y export a PDF/DOCX"
authors = ["Eduardo Llaguno"]
license = "MIT"
repository = "https://github.com/ellaguno/iureditor"
edition = "2021"

[lib]
name = "iureditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.47.0"
base64 = "0.22.1"
# Lectura de imágenes del portapapeles del sistema (pegar capturas). En Linux
# WebKitGTK no entrega los bytes por el evento `paste` del DOM, así que se leen
# vía Rust. `wayland-data-control` añade soporte Wayland además de X11.
arboard = { version = "3", features = ["wayland-data-control"] }
# Codificar el RGBA que devuelve arboard a PNG (ya está en el árbol vía resvg).
png = "0.17"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Para activar la corrección ortográfica de WebKitGTK (misma versión que
# usa wry, ver Cargo.lock).
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# resvg en debug es 10-50x más lento y una rasterización de diagrama grande
# tardaba tanto que el sistema sugería cerrar la app. Optimizar sólo el
# stack de rasterizado también en dev.
[profile.dev.package.resvg]
opt-level = 3
[profile.dev.package.usvg]
opt-level = 3
[profile.dev.package.tiny-skia]
opt-level = 3
[profile.dev.package.tiny-skia-path]
opt-level = 3
[profile.dev.package.rustybuzz]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package.fontdb]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.fdeflate]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
